--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
