--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.12.2",
     "next": "14.2.3",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
