--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.2.1",
     "react-split": "^2.0.14",
     "react-toastify": "^10.0.5",
+    "react-youtube": "^10.1.0",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
